--- a/concurrent/pom.xml
+++ b/concurrent/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>disruptor</artifactId>
             <version>3.2.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
