开始分析kafka consumer源码

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>algorithm</module>
         <module>zk_client</module>
         <module>performance</module>
+        <module>tool</module>
     </modules>
 
     <name>basicjava</name>
