--- a/mylib/pom.xml
+++ b/mylib/pom.xml
@@ -9,16 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cache</artifactId>
+    <artifactId>mylib</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>javax.cache</groupId>
-            <artifactId>cache-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
-
-    </dependencies>
 
 </project>
