--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>zk_client</module>
         <module>performance</module>
         <module>tool</module>
+        <module>mylib</module>
     </modules>
 
     <name>basicjava</name>
