--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -16,7 +16,12 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.8.2</version>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xiaomi.miliao</groupId>
+            <artifactId>xmpush-server-api-http2</artifactId>
+            <version>1.0.8</version>
         </dependency>
     </dependencies>
 
