--- a/jvm/pom.xml
+++ b/jvm/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>jvm</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+    </dependencies>
 
 </project>
